name:            mustools
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base, haskell98, bytestring, filepath, HSH

executable:      musList
main-is:         MusList.hs
hs-source-dirs:  src
